# KPA-YALK_MODULE

./: .gitignore  CMakeLists.txt  liborbita.cpp  liborbita.h
Drivers/E2010/oldusbdrivers/: Readme.!!!
Drivers/E2010/oldusbdrivers/i386/: ldevusb.cat  ldevusb.inf  ldevusb.sys
Drivers/E2010/oldusbdrivers/x64/: ldevusb.cat  ldevusb.sys
Lusbapi/: E140.cpp  E154.cpp  E2010.cpp  E310.cpp  E440.cpp  E440.rc  Lusbapi.aps  Lusbapi.cpp  Lusbapi.def  Lusbapi.rc  Lusbapi64.def  Lusbapi_mingw.def  Lusbbase.cpp  e440.h  winxp.rc  winxp.xml  winxp64.xml
Lusbapi/Projects/BorlandCpp502/: Lusbapi.dsw  Lusbapi.ide
Lusbapi/Projects/BorlandCppBuilder6/: Lusbapi.bpg  Lusbapi.bpr  Lusbapi.dsk  Lusbapi.res  Lusbapi.~bpr
Lusbapi/Projects/CodeBlocks 20_03/: Lusbapi.cbp  Lusbapi.layout  Lusbapi.workspace  Lusbapi.workspace.layout  Lusbapi64.cbp  Lusbapi64.depend
Lusbapi/Projects/Embarcadero C++ Builder 11/: Lusbapi.cbproj  Lusbapi.cbproj.local  Lusbapi.dsk  Lusbapi.groupproj  Lusbapi.groupproj.local  Lusbapi.~dsk  Lusbapi64.cbproj
Lusbapi/Projects/Embarcadero Dev-C++/: Lusbapi.dev  Lusbapi.layout  Lusbapi64.dev  Lusbapi64.layout  Lusbapi64_private.h  Lusbapi64_private.rc  Lusbapi_private.h  Lusbapi_private.rc  Makefile32.win  Makefile64.win
Lusbapi/Projects/MicroSoft Visual C++ 2019 Community/: Lusbapi.vcxproj  Lusbapi.vcxproj.filters
Lusbapi/Projects/MicroSoft Visual C++ 2019 Community/Backup/: Lusbapi.sln  Lusbapi.sln_good  (+2 more)
data/: recording.tlm
desktop_orbita/: CMakeLists.txt  anomaly_widget.cpp  anomaly_widget.h  bar_chart_widget.cpp  bar_chart_widget.h  category_card_widget.cpp  category_card_widget.h  category_grid_widget.cpp  category_grid_widget.h  channel_list_widget.cpp  channel_list_widget.h  channel_picker_dialog.cpp  channel_picker_dialog.h  channel_status.h  config_manager_widget.cpp  config_manager_widget.h  detail_view.cpp  detail_view.h  encoding_utils.cpp  encoding_utils.h  main.cpp  main_page.cpp  main_page.h  mainwindow.cpp  mainwindow.h  metadata_service.cpp  metadata_service.h  parameter_browser.cpp  parameter_browser.h  parameter_database.cpp  parameter_database.h  plot_theme.h  plot_widget.cpp  plot_widget.h  readout_widget.cpp  readout_widget.h  scenario_io.cpp  scenario_io.h  scenario_model.h  scenario_wizard.cpp  (+7 more)
desktop_orbita/resources/: MKA1.txt  resources.qrc  styles.qss
docs/: .gitignore  api_contract.md  device_setup.md  lesson_01_tolerances.md  roots.md  scripting.md  specs-summary.md  tolerances.md
docs/документация о системе телеметрии/анализ/: ЗАДАЧИ.md  ИСД_архитектура.md  протокол_телеметрии.md  тестирование_ЯЛК96.md
docs/документация разрабатываемого ПО/: КПА КПСУ ЯЛК МОДУЛЬ.txt  протокол_орб.txt
docs/о БД и конфигах/: Table parameters.md  build_clean_db.py  scr.py  Контактные УЛК.txt  МКИО_1 Потоки 1-3.txt  ЯЛК 256Гц БСУФТК.txt
docs/рекомендации коллег/: ux_and_api.md
include/: ioctl.h  orbita.h  orbita_address.h  orbita_config.h  orbita_decoder.h  orbita_device.h  orbita_script.h  orbita_tlm.h  orbita_types.h  orbita_value.h
orbita/: CMakeLists.txt
orbita/address/: address_manager.cpp  address_manager.h  address_parser.cpp  address_parser.h
orbita/config/address/: AddressYATPULK.txt  parameters.db  tolerances.tol  Аксел_гироскоп.txt  Быстрые.txt  Виброиспытания.txt  МКИО_2 Потоки 1-3.txt  ЯГР контактные.txt  ЯГР.txt
orbita/decoder/: bitstream_recover.cpp  bitstream_recover.h  decoder_factory.cpp  decoder_factory.h  fifo_buffer.cpp  fifo_buffer.h  frame_decoder.h  frame_decoder_m16.cpp  frame_decoder_m16.h
orbita/device/: device_interface.h  e2010_device.cpp  e2010_device.h
orbita/include/: orbita.h  orbita_types.h
orbita/orbita_core/: channel_registry.cpp  channel_registry.h  data_pool.cpp  data_pool.h  logger.cpp  logger.h  orbita.cpp  orbita_core.cpp  orbita_core.h
orbita/tlm/: tlm_writer.cpp  tlm_writer.h
orbita/value/: value_converter.cpp  value_converter.h
src/address/: address_manager.cpp  address_manager.h  address_parser.cpp  address_parser.h
src/core/: data_pool.cpp  data_pool.h  logger.cpp  logger.h  orbita.cpp  orbita_core.cpp  orbita_core.h  thread_pool.cpp  thread_pool.h
src/decoder/: bitstream_recoverer.cpp  bitstream_recoverer.h  decoder_factory.cpp  decoder_factory.h  fifo_buffer.cpp  fifo_buffer.h  frame_decoder.h  frame_decoder_m16.cpp  frame_decoder_m16.h  frame_decoder_m8.cpp  frame_decoder_m8.h
src/device/: device_interface.h  e2010_device.cpp  e2010_device.h  limesdr_device.cpp  limesdr_device.h  visa_device.cpp  visa_device.h
src/tlm/: tlm_block.h  tlm_reader.cpp  tlm_reader.h  tlm_writer.cpp  tlm_writer.h
src/value/: analog.cpp  contact.cpp  fast.cpp  temperature.cpp  value_converter.cpp  value_converter.h
tests/: test_address_manager.cpp  test_address_parser.cpp  test_bitrecoverer.cpp  test_bitrecoverer_real.cpp  test_decoder_integration.cpp  test_decoder_m16.cpp  test_decoder_m16_from_tlm.cpp  test_e2010_device.cpp  test_e2010_simple.cpp  test_fifo_buffer.cpp  test_frame_decoder_m16.cpp  test_frame_decoder_m16_extended.cpp  test_integration_e2010_fifo_bitrec.cpp  тесты.txt
tests/dis/: test_address_manager.cpp  test_address_parser.cpp  test_core_from_tlm.cpp  test_decoder_m16.cpp  test_decoder_m16_from_tlm.cpp  test_load_dll.cpp  test_lua_script.cpp  test_tlm.cpp
tools/: 00_START_HERE.txt  README.md  USAGE_GUIDE.txt  extract_xlsx.py  import_tolerances.py  tolerances_example.csv  tolerances_template.csv  xlsx_dump.csv
посмотри/о БД/: AddressYATPBSU.txt  AddressYATPBSU1.txt  База_данных_финальная.xlsx  Контактные БСУФТК.txt  Копия МКИО_3 Потоки 1-3.txt  Лист Microsoft Excel.xlsx  МКИО_1 Потоки 4-6.txt  МКИО_2 Потоки 4-6.txt  МКИО_3 Потоки 1-3.txt  МКИО_3 Потоки 4-6.txt  Медленные УЛК.txt  Медленные ЯЛК БСУФТК, ЯПА, БК.txt  Приложение 1 (аналог).docx
посмотри/о телеметрии орбита/: Приложение 2 (цифра).docx
посмотри/прототип дизайна/: Орбита-IV Дизайн-контракт.dc.html  Орбита-IV Пульт.dc.html
посмотри/рекомендации коллег/: channel_registry.cpp  channel_registry.h  metadata_service.cpp  metadata_service.h  orbita_core.cpp  orbita_core.h  test_channel_registry.cpp
